<resources>
    <string name="app_name">中国古诗文</string>
    <string name="action_settings">Settings</string>
    <string name="click_to_skip">点击跳过</string>

    <string name="search_hint">点击进行搜索</string>
    <string name="title_my">我的</string>

    <array name="tab_select_main">
        <item>推荐</item>
        <item>诗文</item>
        <item>名句</item>
        <item>作者</item>
        <item>古籍</item>
    </array>
    <array name="tab_select_search">
        <item>诗文</item>
        <item>作者</item>
        <item>古籍</item>
    </array>

    <!--Search 的三中类型-->
    <string name="type_title">title</string>
    <string name="type_author">author</string>
    <string name="type_guwen">guwen</string>

    <string name="read_more">显示更多</string>
    <string name="read_less">  收起</string>
    <string name="show_all_content">显示更多</string>

    <string name="copy">复制</string>
    <string name="select_all">全选</string>

    <string name="gravity_left">left</string>
    <string name="gravity_center">center</string>
    <string name="gravity_right">right</string>

    <!---->

    <string name="kind">类型</string>
    <string name="dynasty">朝代</string>
    <string name="form">形式</string>

    <string name="page_num">第%1$d/%2$d页</string>

    <string name="ancient_jingbu">经部</string>
    <string name="ancient_shibu">史部</string>
    <string name="ancient_zibu">子部</string>
    <string name="ancient_jibu">集部</string>

    <string name="loading_error">加载失败~(≧▽≦)~啦啦啦.</string>

    <!---->
    <string name="wisdom_theme">主题</string>
    <string name="wisdom_theme_kind">类型</string>

    <!--我的-->

    <string name="my_collect">我的收藏</string>
    <string name="my_browsing_history">浏览历史</string>

    <string name="my_idea">意见与反馈</string>
    <string name="my_download_new">下载最新版本</string>
    <string name="my_grade">为我们评分</string>
    <string name="my_font_size">字体大小</string>
    <string name="my_clear_cache">清理缓存</string>
    <string name="my_mode_night">夜间模式</string>
    <string name="my_about">关于我们</string>
    <string name="my_statement">免责声明</string>

    <string name="clear_cache_ing">清理缓存中...</string>

    <string name="about_my_content">中国古诗文作为传承经典的apk，开发与2017年.中国古诗文专注于古诗文服务，
        致力于让古诗文爱好者更便捷的获取古诗文相关资料。</string>

    <string name="declaration">中国古诗文部分内容来源于网友提交或互联网公开资料，如果我们的某些资料侵犯了您的合法权益或
    对您造成了任何程度的伤害，请及时联系我们，我们在收到通知后将第一时间妥善处理该部分内容。</string>



</resources>
