<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bg"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <include layout="@layout/common_title_bar" />

    <include layout="@layout/common_line_solid" />


    <LinearLayout
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10"
        android:background="@color/my_bg"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@mipmap/icon_next_step"
            android:padding="@dimen/padding_10"
            android:text="@string/my_collect"
            android:textColor="@color/common_h3"
            android:textSize="@dimen/default_medium_text_size" />

        <include layout="@layout/common_line_solid_margin" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@mipmap/icon_next_step"
            android:padding="@dimen/padding_10"
            android:text="@string/my_browsing_history"
            android:textColor="@color/common_h3"
            android:textSize="@dimen/default_medium_text_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10"
        android:background="@color/my_bg"
        android:orientation="vertical">

     <!--   <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@mipmap/icon_next_step"
            android:padding="@dimen/padding_10"
            android:text="@string/my_idea"
            android:textColor="@color/common_h3"
            android:visibility="visible"
            android:textSize="@dimen/default_medium_text_size" />

        <include layout="@layout/common_line_solid_margin" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@mipmap/icon_next_step"
            android:padding="@dimen/padding_10"
            android:text="@string/my_download_new"
            android:textColor="@color/common_h3"
            android:textSize="@dimen/default_medium_text_size" />

        <include layout="@layout/common_line_solid_margin" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@mipmap/icon_next_step"
            android:padding="@dimen/padding_10"
            android:text="@string/my_grade"
            android:textColor="@color/common_h3"
            android:textSize="@dimen/default_medium_text_size" />

        <include layout="@layout/common_line_solid_margin" />-->

        <!--            android:background="@drawable/bg_change_my"-->
        <TextView
            android:id="@+id/my_font_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_change_my"
            android:drawableRight="@mipmap/icon_next_step"
            android:padding="@dimen/padding_10"
            android:text="@string/my_font_size"
            android:textColor="@color/common_h3"
            android:textSize="@dimen/default_medium_text_size" />

        <include layout="@layout/common_line_solid_margin" />

        <TextView
            android:id="@+id/my_clear_cache"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_change_my"
            android:drawableRight="@mipmap/icon_next_step"
            android:padding="@dimen/padding_10"
            android:text="@string/my_clear_cache"
            android:textColor="@color/common_h3"
            android:textSize="@dimen/default_medium_text_size" />

        <include layout="@layout/common_line_solid_margin" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_10"
                android:text="@string/my_mode_night"
                android:textColor="@color/common_h3"
                android:textSize="@dimen/default_medium_text_size" />

            <CheckBox
                android:id="@+id/my_switch_mode"
                android:layout_width="50dp"
                android:layout_height="22dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:checked="true"
                android:button="@null"
                android:background="@drawable/switch_mode"
                android:layout_marginRight="@dimen/margin_10"
               />
        </RelativeLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_10"
        android:background="@color/my_bg"
        android:orientation="vertical">

        <TextView
            android:id="@+id/my_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/my_bg"
            android:drawableRight="@mipmap/icon_next_step"
            android:padding="@dimen/padding_10"
            android:text="@string/my_about"
            android:textColor="@color/common_h3"
            android:visibility="gone"
            android:textSize="@dimen/default_medium_text_size" />

       <!-- <include layout="@layout/common_line_solid_margin" />-->

        <TextView
            android:id="@+id/my_declaration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_change_my"
            android:drawableRight="@mipmap/icon_next_step"
            android:padding="@dimen/padding_10"
            android:text="@string/my_statement"
            android:textColor="@color/common_h3"
            android:textSize="@dimen/default_medium_text_size" />

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="中国古诗文：1.0.1"
        android:textColor="@color/black"
        android:textSize="@dimen/default_small_text_size" />


</LinearLayout>